@@ -84,7 +84,7 @@ __mf_heuristic_check (uintptr_t ptr, uintptr_t ptr_high)
 		  if ((uintptr_t) low <= ptr &&
 		      (uintptr_t) high >= ptr_high)
 		    {
-		      VERBOSE_TRACE ("mf: registering region %08lx-%08lx given %s\n",
+		      VERBOSE_TRACE ("mf: registering region %08lx-%08lx given %s",
 				     (uintptr_t) low, (uintptr_t) high, buf);
 		      
 		      /* XXX: bad hack; permit __mf_register to do its job.  */
