@@ -1,3 +1,14 @@
+2002-09-06  Frank Ch. Eigler  <fche@redhat.com>
+
+	* mf-runtime.c (__mf_register): Correct SEGV-inducing error in
+	overlapping object search.
+	(__mf_violation): Likewise for nearby objects.
+	Improve nearby-object listing.
+	
+	cleanup:
+	* mf-runtime.c, mf-hooks.c: Remove "{{{"/"}}}" folding marks.
+	* mf-heuristics.c (__mf_heuristic_check): Tweak message.
+
 2002-09-03  Frank Ch. Eigler  <fche@redhat.com>
 
 	alloca support:
